fix(vercel): replace conflicting routes with rewrites for SPA fallback

--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,8 @@
       "config": { "distDir": "dist" }
     }
   ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
   "headers": [
     {
